<resources>
    <string name="app_name">WeatherLertApp</string>
    <string name="temperature">Temperature</string>
    <string name="weatherlert_title">WeatherLert</string>
    <string name="weather_alert_title">Weather Alert</string>
    <string name="bad_weather_alert_msg">Bad weather conditions detected in your area!</string>
    <string name="weather_notification_channel_name">Weather Notification</string>
    <string name="weather_notification_channel_desc">Channel for weather alert notifications</string>
    <string name="error_fetching_weather_data">Error fetching weather data.</string>
    <string name="title_text">WeatherLert</string>
    <string name="current_day">Your current day text here</string>
    <string name="weather_condition">Your weather condition text here</string>
    <string name="location">Your location text here</string>
    <string name="title_activity_settings">Settings</string>

</resources>
