<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="312dp"
        android:text="@string/temperature"
        android:textSize="32sp"
        android:fontFamily="monospace"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title_text"
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvCurrentDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/current_day"
        android:textSize="24sp"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="146dp"
        android:layout_height="183dp"
        android:layout_below="@+id/tvCurrentDay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/tvWeatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:text="@string/weather_condition"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeatherCondition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:text="@string/location"
        android:textSize="20sp" />

</RelativeLayout>
